Added metric fitness functions at the package and class levels.